# ViewSeriesExtension

./: .project  CMakeLists.txt  README.md
ViewSeries/: CMakeLists.txt  ViewSeries.py
ViewSeries/Resources/UI/: ViewSeries.ui
